<resources>
    <string name="app_name">BearTimer</string>
    <string name="txtPrepare">SKAPA OCH SPARA!</string>
    <string name="txtTimeLabel">LÄNGD PÅ SPELLISTA!</string>
    <string name="txtPass">PASSNAMN</string>
    <string name="txtTime">LÅTLÄNGD</string>
    <string name="txtHRT">HRT %</string>
    <string name="txtRPM">RPM</string>
    <string name="txtPos">POSITION</string>

    <string name="btnRun">TILLBAKA!</string>
    <string name="btnSave">SPARA TID!</string>
    <string name="edtTime">MM:SS</string>
    <string name="edtHRT">NN</string>
    <string name="edtRPM">NNN</string>
    <string name="edtPos">1 / 2</string>

    <string name="textView">""</string>
    <string name="textView2">""</string>

    <string name="txtMainTitle">"PASS TIMER"</string>
    <string name="btnMainCreate">"Skapa och Spara!"</string>
    <string name="btnMainOpen">"Läs in passdata!"</string>
    <string name="btnMainStart">"STARTA TIMER!"</string>
    <string name="btnMainEnd">"Avsluta!"</string>

    <string name="txtReadTitle">"LÄS IN PASSDATA"</string>
    <string name="txtReadInfo">"Ange passnamn (YYMMDDPPNNN): "</string>
    <string name="edtReadFile">""</string>
    <string name="btnReadSelect">"OK!"</string>
    <string name="txtReadResult">""</string>
    <string name="btnReadEnd">"TILLBAKA!"</string>

    <string name="textView7">"POS"</string>
    <string name="textView8">"HRT"</string>
    <string name="textView9">"RPM"</string>
    <string name="textView10">""</string>
    <string name="textView11">""</string>
    <string name="textView12">""</string>
    <string name="textView13">"POS"</string>
    <string name="textView14">"HRT"</string>
    <string name="textView15">"RPM"</string>



</resources>
