<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtPrepare"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/txtPrepare"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtTime"
        android:layout_width="160dp"
        android:layout_height="69dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/darker_gray"
        android:ems="10"
        android:hint="@string/edtTime"
        android:inputType="time"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FF0000"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/btnSave"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrepare" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="202dp"
        android:layout_height="68dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/btnSave"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrepare" />

    <TextView
        android:id="@+id/txtTimeLabel"
        android:layout_width="379dp"
        android:layout_height="47dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/txtTimeLabel"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSave" />

    <TextView
        android:id="@+id/txtTimes"
        android:layout_width="391dp"
        android:layout_height="346dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="22dp"
        android:background="@android:drawable/editbox_background"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btnRun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTimeLabel" />

    <Button
        android:id="@+id/btnRun"
        android:layout_width="385dp"
        android:layout_height="58dp"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="60dp"
        android:text="@string/btnRun"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
